--- a/lostnfoundwebsite/package.json
+++ b/lostnfoundwebsite/package.json
@@ -13,8 +13,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.1",
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13",
-    "vue-router": "^4.5.0"
+    "vue": "^3.2.13"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
