--- a/lostnfoundwebsite/package.json
+++ b/lostnfoundwebsite/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "bcryptjs": "^2.4.3",
     "core-js": "^3.8.3",
+    "nvm": "^0.0.4",
     "vue": "^3.2.13",
     "vue-router": "^4.5.0",
     "vuex": "^4.0.2"
