--- a/lostnfoundwebsite/package.json
+++ b/lostnfoundwebsite/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.1",
     "@fortawesome/free-regular-svg-icons": "^6.7.1",
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
+    "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
